Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78300

QWizard with AeroStyle and Qt::AA_NativeWindows crashes

XMLWordPrintable

    • Windows
    • 6c0e1dba403ce65285e089bf281319de36d29235 (qt/qtbase/5.13)

      1. qtbug78300_diag.diff
        14 kB
        Friedemann Kleint
      2. qtbug78300_log.txt
        5 kB
        Friedemann Kleint
      3. qtbug78300_modern_log.txt
        12 kB
        Friedemann Kleint
      4. qtbug78300_recursive_creation_stack.txt
        11 kB
        Friedemann Kleint
      5. qtbug78300.zip
        4 kB
        Friedemann Kleint
      For Gerrit Dashboard: QTBUG-78300
      # Subject Branch Project Status CR V

          kleint Friedemann Kleint
          poikelin Joni Poikelin
          Votes:
          0 Vote for this issue
          Watchers:
          3 Start watching this issue

            Created:
            Updated:
            Resolved:

              There are no open Gerrit changes